2003-01-12  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-close.c (_dl_close): Type typo, must be == not = in
	search for removed searchlist.  Reported by Roland McGrath.

	* io/ftwtest-sh: Add test for case of symlink to nonexisting file
	given as start file.

	* io/ftw.c (ftw_startup): Use correct name in check for symlink
	without existing target.  Patch by Jim Meyering.

	* Makerules (build-shlib-helper): Don't use -z defs linker option
	if no-z-defs is defined either.

2003-01-10  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-64/kernel_stat.h: Remove unused
	file.

2003-01-10  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/syscalls.list: Add vfork.
	* sysdeps/unix/sysv/linux/s390/s390-64/syscalls.list: Likewise.

2003-01-12  Ulrich Drepper  <drepper@redhat.com>

	* io/ftwtest-sh: Add test case for relative path with /. at the end.

2003-01-12  Jim Meyering  <jim@meyering.net>

	* io/ftw.c (ftw_startup): When trying to stat the starting directory,
	use the basename if we've already chdir'd into its parent directory.

2003-01-12  Ulrich Drepper  <drepper@redhat.com>

	* io/ftw.c (process_entry): Use relative path when using chdir()
	to change directory after call to ftw_dir.
	* io/ftwtest-sh: Add test for relative path argument to nftw()
	with FTW_CHDIR option.

2002-01-12  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_VFORK_SYSCALL):
	Define for powerpc.
	* sysdeps/unix/sysv/linux/powerpc/syscall.S: Take register alignment
	into account.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h
	(INTERNAL_SYSCALL): Make use of ERR parameter.
	(INTERNAL_SYSCALL_DECL, INTERNAL_SYSCALL_ERRNO,
	INTERNAL_SYSCALL_ERROR_P): Adjust accordingly.
	(INLINE_SYSCALL): Make use of INTERNAL_SYSCALL.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/vfork.S: New file.

2002-01-09  Richard Henderson  <rth@redhat.com>
